CHANGELOG

>>VERSION 17.9.4
* Optimization
* Fixed bug with Yi Ti bombardier, having speed 1.1 instead of 1.4 while attacking

>>VERSION 17.9.3
+ Added new hill biomes for the Near Essos
+ Added Lorath Maze biome
* Reworked all the free cities biomes + Ghiscar & Qarth

* Improved colored hair of a few essos factions
* Improved recipes. Lots of recipes were moved to vanilla table
* Improved Ibbenese Wall
* Improved faction relations
* Improved essos weapon textures

* Fixed bug with Qarkash location
* Fixed bug with volantis, north table
* Fixed bug with wrong recipes
* Fixed bug with lots of grass near fixed towns
* Fixed a few typos in ukrainian translation

>>VERSION 17.9.2
+ Added GOT API (got.common.util.GOTAPI.java)
+ Added full French translation (prod. Agripas)

* Improved Ukrainian translation of Yi Ti names

* Fixed bug with GOT Mod Updater

- Removed GOTCommander

>>VERSION 17.9.1
* Fixed bug that removed The Wall

* Improved GUI (factions, menu, barrel)
* Improved Essos banner textures. Not only colors, but symbols also were changed.
* Improved Essos shield textures.
* Improved crafting textures
* Improved name banks

>>VERSION 17.9
* Remade Ulthos from scratch
* Greatly improved Sothoryos
* Greatly improved Ukrainian translation (prod. Octobrine)
* Greatly Improved Far East map, improved biome colors
* Greatly Improved ru & uk lore books (prod. Octobrine)
+ Added new Mossovy, Sothoryos & Ulthos waypoints, achievements, biomes
+ Added new female skins
+ Added more miners, goldsmiths, florists
+ Added Shraik

* Improved a few spheres of influence
* Improved targaryen armor
* Improved aegon helmet
* Improved stats of ifekevrons and stone men
* Improved summer villages
* Improved spheres of influence
* Improved and unlocked database generator
* Improved Mossovy Sopkas
* Improved King Spears biome
* Improved map (more accurate country borders)
* Improved trade entries

* Recoded lots of NPC: now they can be women