@@ -2,6 +2,7 @@ CHANGELOG
 
 >>VERSION 17.9.4
 * Optimization
+* Fixed bug with GOTAPI$setClientMapImage
 * Fixed bug with Yi Ti bombardier, having speed 1.1 instead of 1.4 while attacking
 
 >>VERSION 17.9.3
